--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -313,3 +313,18 @@ executable day18
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wunused-packages
+
+executable day19
+    main-is:          Main.hs
+    build-depends:    base
+                     ,Common
+    hs-source-dirs:   day19
+    default-language: Haskell2010
+    ghc-options:      -Wall
+                      -Wcompat
+                      -Widentities
+                      -Wincomplete-uni-patterns
+                      -Wincomplete-record-updates
+                      -Wredundant-constraints
+                      -Wpartial-fields
+                      -Wunused-packages
