--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -344,3 +344,19 @@ executable day20
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wunused-packages
+
+executable day21
+    main-is:          Main.hs
+    build-depends:    base
+                     ,Common
+                     ,split
+    hs-source-dirs:   day21
+    default-language: Haskell2010
+    ghc-options:      -Wall
+                      -Wcompat
+                      -Widentities
+                      -Wincomplete-uni-patterns
+                      -Wincomplete-record-updates
+                      -Wredundant-constraints
+                      -Wpartial-fields
+                      -Wunused-packages
