--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -407,3 +407,18 @@ executable day24
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wunused-packages
+
+executable day25
+    main-is:          Main.hs
+    build-depends:    base
+                     ,containers
+    hs-source-dirs:   day25
+    default-language: Haskell2010
+    ghc-options:      -Wall
+                      -Wcompat
+                      -Widentities
+                      -Wincomplete-uni-patterns
+                      -Wincomplete-record-updates
+                      -Wredundant-constraints
+                      -Wpartial-fields
+                      -Wunused-packages
